# apisec-graphql-github

./: .gitignore  README.md  pyproject.toml  requirements.txt
design/: ec2_deployment.md
githubdata/: __init__.py  main.py
githubdata/resolvers/: __init__.py  launch_resolver.py
githubdata/schema/: __init__.py  types.py
githubdata/services/: spacex_api.py
scripts/: deploy.sh  generate_schema.py  generate_sdl.py
